cập nhật test cases